fixed overflow issues

--- a/static/style.css
+++ b/static/style.css
@@ -5744,3 +5744,8 @@ input[type="radio"] + span::after {
   opacity: 1;
   pointer-events: all;
 }
+
+html, body {
+  overflow-x: hidden !important;
+  max-width: 100vw !important;
+}
